# algovisual

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
.github/workflows/: lint.yml
app/: CMakeLists.txt
app/src/: main.cpp
assets/shaders/: ui.vert
cmake/: CompileShaders.cmake  CopyAssets.cmake
engine/: CMakeLists.txt
engine/include/av/core/: application.h  logger.h  window.h
engine/include/av/render/: vk_common.h  vk_context.h  vk_debug.h  vk_swapchain.h
engine/include/av/scene/: menu_scene.h  scene.h  scene_manager.h
engine/include/av/ui/: imgui_layer.h
engine/src/core/: application.cpp  logger.cpp  window.cpp
engine/src/render/: vk_context.cpp  vk_debug.cpp  vk_swapchain.cpp
engine/src/scene/: menu_scene.cpp  scene_manager.cpp
engine/src/ui/: imgui_layer.cpp
include/: component.h
include/vk_comp/: vk_context.h  vk_debug.h
main/: engine.cpp
src/: engine.cpp
src/vk_comp/: vk_context.cpp  vk_debug.cpp
